# Autonomous_Robot_Stack

./: .gitignore  README.md  frames_2026-07-01_13.34.47.gv
robot_description/: package.xml
robot_navigation/: CMakeLists.txt  package.xml
src/robot_bringup/: package.xml
src/robot_bringup/launch/: vtol_simulation.launch.py
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/src/: motor_controller_node.cpp  vtol_flight_node.cpp
src/robot_description/: CMakeLists.txt
src/robot_description/launch/: display.launch.py
src/robot_description/meshes/ground_vehicle/: model.sdf
src/robot_description/urdf/: inspection_robot.urdf.xacro
src/robot_interfaces/: package.xml
src/robot_perception/: CMakeLists.txt  package.xml
src/robot_simulation/: CMakeLists.txt  package.xml
src/robot_simulation/launch/: simulation.launch.py
src/robot_simulation/worlds/: empty.sdf  space_target.sdf
