cmake_minimum_required(VERSION 3.8)
project(robot_control)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(nav_msgs REQUIRED) # ADD THIS LINE HERE

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()
add_executable(motor_controller_node
  src/motor_controller_node.cpp
)

ament_target_dependencies(
  motor_controller_node
  rclcpp
  geometry_msgs
  std_msgs
)

install(
  TARGETS motor_controller_node
  DESTINATION lib/${PROJECT_NAME}
)
# Find standard ROS 2 dependencies
find_package(rclcpp REQUIRED)
find_package(geometry_msgs REQUIRED)

# Declare and build the executable binary node
add_executable(vtol_flight_node src/vtol_flight_node.cpp)
ament_target_dependencies(vtol_flight_node rclcpp geometry_msgs nav_msgs)

# Install the executable so ROS 2 can launch it
install(TARGETS
  vtol_flight_node
  DESTINATION lib/${PROJECT_NAME}
)

ament_package()
